--- a/scss/sections/_portfolio.scss
+++ b/scss/sections/_portfolio.scss
@@ -38,9 +38,7 @@
     }
 
     @include media-breakpoint-down(lg) {
-        .portfolio {
             margin-top: 50px;
-        }
 
         h4 {
             font-size: 1rem;
@@ -69,9 +67,6 @@
     }
 
     @include media-breakpoint-down(md) {
-        .portfolio {
-            margin-top: 70px;
-        }
 
         &-img-right {
             position: relative;
